--- a/2-dom-manipulation/examples-creating-elements/a.html
+++ b/2-dom-manipulation/examples-creating-elements/a.html
@@ -39,7 +39,7 @@
                     const aEl = document.createElement('a');
                     aEl.innerText = 'learn about badgers';
                     aEl.href = 'https://www.badgerbadgerbadger.com';
-                    aEl.expected = '_blank';
+                    aEl.target = '_blank';
 
                     document.getElementById('actual').appendChild(aEl);
                 </script>
