--- a/2-dom-manipulation/examples-creating-elements/details-summary.html
+++ b/2-dom-manipulation/examples-creating-elements/details-summary.html
@@ -47,7 +47,7 @@
                     const aEl = document.createElement('a');
                     aEl.innerText = 'Mr. Traversy does it again!';
                     aEl.href = 'https://www.youtube.com/watch?v=0ik6X4DJKCc';
-                    aEl.expected = '_blank';
+                    aEl.target = '_blank';
 
                     const detailsEl = document.createElement('details');
                     detailsEl.appendChild(summaryEl);
