--- a/2-dom-manipulation/exercises/1-change-text.html
+++ b/2-dom-manipulation/exercises/1-change-text.html
@@ -36,6 +36,7 @@
                     debugger;
 
                     // write me! (... without using cloneNode, that's kind of cheating)
+                    document.querySelector('#actual h1').innerText = 'hi!';
                 </script>
             </div>
 
