--- a/2-listeners-and-handlers/exercise-1.html
+++ b/2-listeners-and-handlers/exercise-1.html
@@ -6,7 +6,7 @@
 
         <style>
             .secret {
-                display: hidden;
+                display: none;
             }
         </style>
     </head>
