--- a/2-listeners-and-handlers/exercise-2.html
+++ b/2-listeners-and-handlers/exercise-2.html
@@ -14,7 +14,7 @@
             }
 
             .second-class {
-                display: hidden;
+                display: none;
             }
 
             .third-class {
