--- a/2-dom-manipulation/exercises/6-fix-the-list.html
+++ b/2-dom-manipulation/exercises/6-fix-the-list.html
@@ -46,6 +46,23 @@
                     debugger;
 
                     // write me! (... without using cloneNode, that's kind of cheating)
+
+                    // Add h1
+                    const header = document.createElement('h1');
+                    header.innerText = 'a list of things';
+
+                    const parent = document.getElementById('actual');
+                    parent.insertBefore(header, parent.firstChild);
+
+                    const olElement = document.querySelector('#actual ol');
+
+                    // replace ol with ul
+                    const ulEl = document.createElement('ul');
+                    ulEl.innerHTML = `
+                    <li>robots</li>
+                    <li>solar systems</li>
+                    <li>oil</li>`;
+                    olElement.replaceWith(ulEl);
                 </script>
             </div>
 
