--- a/2-dom-manipulation/exercises/3-update-list.html
+++ b/2-dom-manipulation/exercises/3-update-list.html
@@ -46,10 +46,10 @@
                     debugger;
 
                     // write me! (... without using cloneNode, that's kind of cheating)
-                    const lis = document
+                    const list = document
                         .querySelector('#actual ul')
                         .querySelectorAll('li');
-                    lis[0].innerText = 'robots';
+                    list[0].innerText = 'robots';
                 </script>
             </div>
 
