--- a/2-dom-manipulation/exercises/4-add-a-link.html
+++ b/2-dom-manipulation/exercises/4-add-a-link.html
@@ -27,7 +27,7 @@
                     <h2>a great tutorial on DOM manipulation:</h2>
                     <a
                         href="https://www.youtube.com/watch?v=0ik6X4DJKCc"
-                        expected="_blank"
+                        target="_blank"
                         >Mr. Traversy does it again!</a
                     >
                 </div>
@@ -41,6 +41,12 @@
                     debugger;
 
                     // write me! (... without using cloneNode, that's kind of cheating)
+                    const aEl = document.createElement('a');
+                    aEl.href = 'https://www.youtube.com/watch?v=0ik6X4DJKCc';
+                    aEl.innerText = 'Mr. Traversy does it again!';
+                    aEl.target = '_blank';
+
+                    document.getElementById('actual').append(aEl);
                 </script>
             </div>
 
