--- a/2-isolate-and-integrate/2-integrate/03-event-delegation/exercises/2-todo.html
+++ b/2-isolate-and-integrate/2-integrate/03-event-delegation/exercises/2-todo.html
@@ -15,37 +15,43 @@
         </main>
 
         <script id="handlers">
-            const deleteTodoHandler = (event) => {
+            const deleteTodoHandler = (e) => {
                 debugger;
-                const target = _;
-                if (target._ === 'BUTTON' && target._ === 'X') {
-                    const liToRemove = _.parentElement;
-                    const todoList = document.getElementById(_);
-                    todoList._(liToRemove);
+                const target = e.target;
+                if (target.nodeName === 'BUTTON' && target.innerHTML === 'X') {
+                    const liToRemove = target.parentElement;
+                    const todoList = document.getElementById('list');
+                    todoList.removeChild(liToRemove);
                 }
             };
 
-            const addTodoHandler = (event) => {
+            const addTodoHandler = (e) => {
                 debugger;
 
-                const newLi = document.createElement(_);
-                const newButton = document.createElement(_);
-                newButton.innerHTML = '_';
+                const newLi = document.createElement('li');
+                const newButton = document.createElement('button');
+                newButton.innerHTML = 'X';
                 newLi.appendChild(newButton);
-                const newInput = document.createElement(_);
+                const newInput = document.createElement('input');
                 newLi.appendChild(newInput);
 
-                const addButton = event._;
-                const addButtonParent = addButton._;
-                const todoList = addButtonParent._;
-                todoList.insertBefore(_, _);
+                const addButton = e.target;
+                const addButtonParent = addButton.parentElement;
+                const todoList = addButtonParent.parentElement;
+                todoList.insertBefore(newLi, addButtonParent);
             };
         </script>
 
         <script id=" listeners">
-            document.getElementById(_).addEventListener('click', _);
+            document
+                .getElementById('add-todo-button')
+                .addEventListener('click', (e) => {
+                    addTodoHandler(e);
+                });
 
-            document.getElementById(_).addEventListener('click', _);
+            document.getElementById('list').addEventListener('click', (e) => {
+                deleteTodoHandler(e);
+            });
         </script>
     </body>
 </html>
