--- a/2-listeners-and-handlers/exercise-4.html
+++ b/2-listeners-and-handlers/exercise-4.html
@@ -25,7 +25,7 @@
         <section id="user-interface">
             <form class="inputs" id="inputs">
                 <input name="value" type="text" />
-                <select name="type" id="_">
+                <select name="type" id="selector">
                     <option value="string">string</option>
                     <option value="number">number</option>
                     <option value="boolean">boolean</option>
@@ -38,46 +38,52 @@
         <script id="handlers">
             'use strict';
 
-            const _ = (event) => {
+            const first = (e) => {
                 debugger;
-                console.assert(event.type === 'click', 'first, event.type');
+                console.assert(e.type === 'click', 'first, e.type');
                 console.assert(
-                    event.target.id === 'user-action',
-                    'first, event.target.id',
+                    e.target.id === 'user-action',
+                    'first, e.target.id',
                 );
                 console.assert(
-                    event.target.value === 'a button',
-                    'first, event.target.value',
+                    e.target.value === 'a button',
+                    'first, e.target.value',
                 );
                 console.assert(
-                    event.target.nodeName === 'INPUT',
-                    'first, event.target.nodeName',
+                    e.target.nodeName === 'INPUT',
+                    'first, e.target.nodeName',
                 );
                 console.assert(
-                    event.target.form.id === 'inputs',
-                    'first, event.target.form.id',
+                    e.target.form.id === 'inputs',
+                    'first, e.target.form.id',
                 );
             };
 
-            const second = (event) => {
+            const second = (e) => {
                 debugger;
-                console.assert(event.type === '_', 'second, event.type');
+                console.assert(e.type === 'change', 'second, e.type');
                 console.assert(
-                    event.target.id === 'selector',
-                    'second, event.target.id',
+                    e.target.id === 'selector',
+                    'second, e.target.id',
                 );
                 console.assert(
-                    event.target.nodeName === 'SELECT',
-                    'second, event.target.id',
+                    e.target.nodeName === 'SELECT',
+                    'second, e.target.id',
                 );
             };
         </script>
 
         <script id="listeners">
-            document.getElementById('_').addEventListener('click', first);
+            document
+                .getElementById('user-action')
+                .addEventListener('click', (e) => {
+                    first(e);
+                });
             document
                 .getElementById('selector')
-                .addEventListener('change', second);
+                .addEventListener('change', (e) => {
+                    second(e);
+                });
         </script>
     </body>
 </html>
