--- a/3-stepped/1-single-interaction/flip-book/3-listener.html
+++ b/3-stepped/1-single-interaction/flip-book/3-listener.html
@@ -34,11 +34,9 @@
         <script id="listeners">
             // test the listener by logging the event and trying the thing
             // explore it in console to see what values you will be able to use later on
-            document
-                .getElementById('input')
-                .addEventListener('keyup', (event) => {
-                    console.log(event);
-                });
+            document.getElementById('input').addEventListener('keyup', (e) => {
+                console.log(e);
+            });
         </script>
     </body>
 </html>
