--- a/3-stepped/1-single-interaction/mouse-coordinates/3-listeners.html
+++ b/3-stepped/1-single-interaction/mouse-coordinates/3-listeners.html
@@ -36,8 +36,8 @@
             // expand the event in console to see what values it contains
             document
                 .getElementById('user-interface')
-                .addEventListener('mousemove', (event) => {
-                    console.log(event);
+                .addEventListener('mousemove', (e) => {
+                    console.log(e);
                 });
         </script>
     </body>
