--- a/3-stepped/1-single-interaction/mouse-coordinates/4-handlers.html
+++ b/3-stepped/1-single-interaction/mouse-coordinates/4-handlers.html
@@ -32,10 +32,10 @@
         <script id="utils"></script>
         <script id="handlers">
             // read input, process the data, communicate results
-            const handler = (event) => {
+            const handler = (e) => {
                 debugger;
-                const xValue = event.pageX;
-                const yValue = event.pageY;
+                const xValue = e.pageX;
+                const yValue = e.pageY;
                 const formattedCoordinates = 'X: ' + xValue + '\nY: ' + yValue;
                 document.getElementById('mouse-position').innerHTML =
                     formattedCoordinates;
