--- a/test/index.html
+++ b/test/index.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./styles/style.css" />
         <title>Document</title>
     </head>
     <body>
         <section id="container">
-            <div id="parent">I am a div</div>
+            <button type="button" id="btn">I am a div</button>
         </section>
-        <script src="./main.js"></script>
+        <script type="module" src="./src/init.js"></script>
     </body>
 </html>
