--- a/2-isolate-and-integrate/2-integrate/data-in-object/exercises/entries-manager.html
+++ b/2-isolate-and-integrate/2-integrate/data-in-object/exercises/entries-manager.html
@@ -30,7 +30,7 @@
         <script id="data">
             let userEntries = {
                 wood: 'oak',
-                television: 'flat',
+                television: '>:)',
             };
         </script>
 
