--- a/2-isolate-and-integrate/2-integrate/02-read-write-dom/examples/2-authentication.html
+++ b/2-isolate-and-integrate/2-integrate/02-read-write-dom/examples/2-authentication.html
@@ -42,12 +42,12 @@
             <button id="log-out">log out</button>
         </main>
 
-        <script id="data" type="module">
+        <script id="data">
             let loggedIn = false;
             let currentUser = undefined;
         </script>
 
-        <script id="handlers" type="module">
+        <script id="handlers">
             const logInHandler = () => {
                 debugger;
 
@@ -129,7 +129,7 @@
             };
         </script>
 
-        <script id="listeners" type="module">
+        <script id="listeners">
             document
                 .getElementById('log-in')
                 .addEventListener('click', logInHandler);
