--- a/2-magic-variables/event.html
+++ b/2-magic-variables/event.html
@@ -12,6 +12,7 @@
         </section>
 
         <script id="data">
+            // debugger;
             // what happens if you uncomment this line?
             // const event = 'hi';
         </script>
