--- a/2-magic-variables/id.html
+++ b/2-magic-variables/id.html
@@ -22,11 +22,11 @@
             console.log(clickItButton);
 
             // what happens if you uncomment this line?
-            // const clicky = 'hi';
+            const clicky = 'hi';
 
             // or this line?
             // window['click-it'] = 'bye';
-
+            debugger;
             console.log(clicky);
             console.log(window['click-it']);
         </script>
